[package]
name = "targeted-bulk"
version = "0.1.0"
edition = "2021"
authors = ["Andrew Gazelka <andrew.gazelka@gmail.com>"]
readme = "README.md"

[dependencies]
derive_more = "0.99.17"
evenio = "0.6.0"
rayon = "1.10.0"

[lints.clippy]
complexity = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
style = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }

non_send_fields_in_send_ty = "allow"
mut_from_ref = "allow"
missing_panics_doc = "allow"

[dev-dependencies]
derive_more = "0.99.17"
fastrand = "2.1.0"
proptest = "1.4.0"
